--- a/css/style.css
+++ b/css/style.css
@@ -218,6 +218,42 @@ a:hover .fa-plus {
   background-color: #f6f7f7;
 }
 /* ----------------------------------------------- */
+/* 5 making an impact */
+.five {
+  display: flex;
+  background-color: #f6f7f7;
+}
+
+.sec5left {
+  width: 34%;
+}
+
+.five img {
+  height: 500px;
+  width: auto;
+}
+
+.sec5right {
+  width: 66%;
+  position: relative;
+  background-color: white;
+}
+
+.sec5left {
+  position: relative;
+  text-align: center;
+}
+
+
+.jumbotext {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+
+/* ----------------------------------------------- */
 /* 6 client feedback */
 .six {
   display: flex;
