--- a/css/style.css
+++ b/css/style.css
@@ -92,26 +92,6 @@ button {
   background-color: #5ddecc;
   color: white;
 }
-
-.dropitem {
-  position: relative;
-}
-
-.dropdown {
-  display: none;
-  position: absolute;
-  top: 80px;
-  left: 0px;
-  min-width: 150%;
-}
-.dropdownUl {
-  display: flex;
-  flex-direction: column;
-}
-
-.hiddendiv {display:none;}
-.visiblediv {display:block;}
-
 /* INIZIO STRUTTURA */
 header{
   height: 80px;
@@ -142,26 +122,33 @@ header{
   margin-right: 10%;
 }
 
-.headerRight ul{
+.mainNavRight > ul{
   display: flex;
   justify-content: space-between;
+}
+
+.mainNavRight  ul{
   list-style: none;
 }
+
 
 .headerRight li {
   height: 80px;
 }
 
 .headerRight a {
+  text-decoration: none;
+}
+
+.headerRight-main-a {
   height: 80px;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100px;
-  text-decoration: none;
 }
 
-.headerRight a:hover {
+.headerRight-main-a:hover {
   color: #1b304b;
   background-color: #f6f7f7;
 }
@@ -177,6 +164,48 @@ header{
 
 a:hover .fa-plus {
   color: #1b304b;
+}
+
+
+.dropitem {
+  position: relative;
+}
+
+.dropdown {
+  display: none;
+  position: absolute;
+  top: 80px;
+  left: 0px;
+  min-width: 150px;
+}
+
+
+.dropdownUl {
+  display: flex;
+  flex-direction: column;
+}
+
+.dropdownLi {
+  display: flex;
+  align-items: center;
+}
+
+.dropdownLi:hover {
+background-color: #5ddecc;
+}
+
+
+.dropdownLi:hover .dropdownA {
+  color: #1c1b21;
+}
+
+
+.dropdownA {
+  margin-left: 20px;
+}
+
+.visiblediv {
+  display: inline-block;
 }
 
 /* ----------------------------------------------- */
